# envkernel

./: .gitignore  envkernel.py  kubekernel.py  main.py  pod.yaml  pyproject.toml  setup.py
data/: service.yaml
src/envkernel/: dummy.py  envkernel.py  kubekernel.py  main.py
src/envkernel/data/: pod.yaml
